[tool.poetry]
name = "directory_samples"
version = "0.1.0"
description = "Samples how to use the FHIR Directory Search API"
authors = ["Sergej Suskov <sergej.suskov@gematik.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pydantic = "^1.10.2"
rich = "^12.5.1"
zeep = "^4.1.0"
# patched version to support the brainpool curves
jwcrypto = { git = "https://github.com/spilikin/jwcrypto.git", branch = "master"}

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search_api_matrix_password = "directory_samples.search_api_matrix_password:main"
search_api_matrix_sso = "directory_samples.search_api_matrix_sso:main"
tim_provider_api = "directory_samples.tim_provider_api:main"
owner_authenticate_softcert = "directory_samples.owner_authenticate_softcert:main"
owner_authenticate_konnektor = "directory_samples.owner_authenticate_konnektor:main"
verify_certificate = "directory_samples.verify_certificate:main"
