[tool.poetry]
name = "fhir_search"
version = "0.1.0"
description = "Samples how to use the FHIR Directory Search API"
authors = ["Sergej Suskov <sergej.suskov@gematik.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pydantic = "^1.10.2"
rich = "^12.5.1"
PyJWT = "^2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
search_api_matrix = "fhir_search.search_api_matrix:main"
tim_provider_api = "fhir_search.tim_provider_api:main"
